add configuration for minio and database (imported from secret.properties)

--- a/simple-shop-api/src/main/resources/application.properties
+++ b/simple-shop-api/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.config.import=optional:secret.properties
 spring.application.name=simple-shop-api
+
+minio.publicUrlExpiryTime=60
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=validate
+
+server.port=8081
