--- a/simple-shop-api/src/main/resources/application.properties
+++ b/simple-shop-api/src/main/resources/application.properties
@@ -7,4 +7,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 
+server.servlet.context-path =/api
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
 server.port=8081
