feat: edit, delete, get detail, get all orders

--- a/simple-shop-api/pom.xml
+++ b/simple-shop-api/pom.xml
@@ -67,6 +67,11 @@
 			<artifactId>cuid-java</artifactId>
 			<version>0.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.17.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
