--- a/simple-shop-api/pom.xml
+++ b/simple-shop-api/pom.xml
@@ -70,7 +70,13 @@
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
-			<version>6.17.0</version>
+			<version>6.20.5</version>
+			<exclusions>
+				<exclusion>
+				<artifactId>commons-logging</artifactId>
+				<groupId>commons-logging</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
